Added world loading from image file. Improved API error handling.
